[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Maps/Pause.gd" type="Script" id=1]
[ext_resource path="res://Menu/image.jpg" type="Texture" id=2]
[ext_resource path="res://Menu/medieval-pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/2sword.png" type="Texture" id=4]
[ext_resource path="res://Menu/trompete.png" type="Texture" id=5]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0, 0, 0, 0 )
vertical = true

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 0, 0, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 0, 0, 1 )
vertical = true

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.309804, 1, 0, 1 )

[sub_resource type="StyleBoxLine" id=12]
color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxLine" id=13]
color = Color( 1, 0, 0, 1 )

[node name="Node2D" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BackGround" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.560784 )
margin_left = -16.0
margin_top = -21.0
margin_right = 1039.0
margin_bottom = 833.0
rect_scale = Vector2( 1, 0.75 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="VSlider" parent="."]
visible = false
margin_left = 377.0
margin_top = 214.0
margin_right = 409.0
margin_bottom = 348.0
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -67.5
margin_right = 121.0
margin_bottom = 67.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "RESUME"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 242.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "RESTART"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 30.0
margin_right = 242.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.235294, 1, 1 )
text = "FULLSCREM"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 242.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "OPTIONS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MENU" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 109.0
margin_right = 242.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.439216, 0.0509804, 0.0509804, 1 )
text = "MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 242.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -73.5
margin_right = 78.0
margin_bottom = 73.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="VBoxContainer2"]
margin_right = 165.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Full" type="Button" parent="VBoxContainer2"]
margin_top = 49.0
margin_right = 165.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "FULLSCREEN"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckBox" parent="VBoxContainer2"]
margin_top = 79.0
margin_right = 165.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "MUTE"
icon = ExtResource( 5 )
flat = true
align = 1

[node name="Music" type="HSlider" parent="VBoxContainer2"]
margin_top = 123.0
margin_right = 165.0
margin_bottom = 155.0
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 12 )
custom_styles/grabber_area = SubResource( 13 )
min_value = -10.0
max_value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="VBoxContainer/Continue" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Continue" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Full" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer2/Full" to="." method="_on_Full_pressed"]
[connection signal="mouse_entered" from="VBoxContainer2/CheckButton" to="VBoxContainer2/CheckButton" method="_on_CheckButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer2/CheckButton" to="VBoxContainer2/CheckButton" method="_on_CheckButton_mouse_exited"]
[connection signal="toggled" from="VBoxContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="VBoxContainer2/Music" to="." method="_on_Music_value_changed"]
